Updated functions that plot log-likelihood emulator predictions and MCMC coverage plots.

--- a/scripts/gp_post_approx_paper/multidim_toy_examples.Rmd
+++ b/scripts/gp_post_approx_paper/multidim_toy_examples.Rmd
@@ -16,8 +16,8 @@ library(data.table)
 
 base_dir <- file.path("/projectnb", "dietzelab", "arober", "gp-calibration")
 src_dir <- file.path(base_dir, "src")
-output_dir <- file.path(base_dir, "output", "gp_post_approx_paper", 
-                        "multidim_toy_examples", "N100_D11")
+output_dir <- file.path(base_dir, "output", "gp_post_approx_paper", "linGauss", "linGauss_d3_p10_N30_LHS")
+                       # "multidim_toy_examples", "N100_D11")
 
 source(file.path(src_dir, "gpWrapper.r"))
 source(file.path(src_dir, "general_helper_functions.r"))
@@ -166,78 +166,6 @@ coverage_plt_list <- get_1d_coverage_plots(samp_dt, "exact", burn_in_start=burn_
 coverage_plts <- coverage_plt_list$plots
 
 for(plt in coverage_plts) plot(plt)
-```
-
-
-```{r}
-x <- 1:100
-y <- x^2 + 100*rnorm(n=100)
-form <- as.formula(paste0("y ~ ", paste0("poly(", "x", ", degree=2)", collapse=" + ")))
-lm1 <- lm(form, data.frame(x=x, y=y))
-x_tst <- seq(-50, 50, length.out=200)
-pred <- predict(lm1, data.frame(x=x_tst))
-plot(x_tst, pred, type="line", col="blue", xlim=c(-50, 100))
-lines(x_tst, x_tst^2, col="red")
-points(x, y)
-```
-
-```{r}
-gptest <- gpWrapperKerGP(matrix(x, ncol=1), matrix(y, ncol=1), normalize_output=TRUE, scale_input=TRUE)
-gptest$fit("Gaussian", "quadratic", estimate_nugget=TRUE, multistart=3)
-predgp <- gptest$predict(matrix(x_tst, ncol=1))
-gptest$gp_model[[1]]$betaHat
-
-
-gptest$plot_pred_1d(matrix(x_tst, ncol=1), include_interval=TRUE, Y_new=matrix(x_tst, ncol=1)^2)
-
-plot(x_tst, predgp$mean, type="line", col="blue", xlim=c(-50, 100))
-lines(x_tst, predgp$trend, type="line", col="green")
-lines(x_tst, x_tst^2, col="red")
-points(x, y)
-```
-
-```{r}
-X <- get_batch_design("LHS", 100, bounds=rbind(c(-1, -1), c(1, 1)))
-X_tst <- get_batch_design("LHS", 500, bounds=rbind(c(-1, -1), c(1, 1)))
-
-colnames(X) <- c("x1", "x2")
-colnames(X_tst) <- c("x1", "x2")
-
-f <- function(x) 2*x[,1,drop=FALSE]^2 + 3*x[,2,drop=FALSE] - 5*x[,1,drop=FALSE]*x[,2,drop=FALSE] - 12 + 3*x[,1,drop=FALSE]
-y <- f(X) + 1 * rnorm(100)
-y_tst <- f(X_tst)
-
-gptest <- gpWrapperKerGP(X, y, normalize_output=TRUE, scale_input=TRUE)
-gptest$fit("Gaussian", "quadratic", estimate_nugget=TRUE, multistart=5, trace=TRUE)
-gptest$gp_model[[1]]$betaHat
-
-predgp <- gptest$predict(X_tst)
-
-plot(y_tst, predgp$mean, col="blue")
-abline(a=0, b=1, col="red")
-
-plot(y_tst, predgp$trend, col="green")
-abline(a=0, b=1, col="red")
-```
-
-```{r}
-  mcmc_info_list <- run_approx_mcmc_comparison(inv_prob_list=inv_prob, 
-                                               llik_em_obj=llik_em_list[["em_llik_quad"]], 
-                                               mcmc_tags="mcwmh-joint", save_dir=output_dir, 
-                                               samp_dt=samp_dt, mcmc_list=mcmc_list, 
-                                               test_label_suffix="em_llik_quad", N_itr=N_mcmc, 
-                                               par_init=mcmc_par_init, overwrite=TRUE)
-
-
-```
-
-```{r}
-matplot(X_test, prior_samp, type="l")
-
-plot(x, y)
-lines(X_test, y_test, col="red")
-lines(X_test, y_hat, col="blue")
-  
 ```
 
 
