--- a/scripts/test/gpWrapper_tests.Rmd
+++ b/scripts/test/gpWrapper_tests.Rmd
@@ -5,7 +5,6 @@ date: '2023-12-19'
 output: html_document
 ---
 
-
 ```{r, echo = FALSE, include = FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 
@@ -26,7 +25,6 @@ source(file.path(src_dir, "plotting_helper_functions.r"))
 ```{r}
 set.seed(10)
 ```
-
 
 ```{r}
 #
@@ -164,16 +162,17 @@ gpHet1_update$plot_pred_1d(X1_new, Y_new=Y1_new_noiseless)
 ## kergp
 ```{r}
 
+# TODO: TEMP: gpWrapperKerGP currently only supports fixed nugget. 
 # Default fit/predict. 
-gpKerGP1 <- gpWrapperKerGP(X1, Y1, normalize_output=TRUE, scale_input=TRUE)
-gpKerGP1$fit("Gaussian", "constant", optimFun="stats::optim")
-gpKerGP1_pred <- gpKerGP1$predict(X_new=X1_new, return_cov=TRUE)
-gpKerGP1$plot_pred_1d(X1_new, pred_list=gpKerGP1_pred, Y_new=Y1_new_noiseless)
+# gpKerGP1 <- gpWrapperKerGP(X1, Y1, normalize_output=TRUE, scale_input=TRUE)
+# gpKerGP1$fit("Gaussian", "constant", optimFun="stats::optim")
+# gpKerGP1_pred <- gpKerGP1$predict(X_new=X1_new, return_cov=TRUE)
+# gpKerGP1$plot_pred_1d(X1_new, pred_list=gpKerGP1_pred, Y_new=Y1_new_noiseless)
 
 # Fit/predict with fixed small nugget (intended for interpolation). 
 gpKerGP1 <- gpWrapperKerGP(X1, Y1, normalize_output=TRUE, scale_input=TRUE)
-gpKerGP1$fit("Matern3_2", "constant", optimFun="stats::optim", estimate_nugget=FALSE)
-gpKerGP1_pred <- gpKerGP1$predict(X_new=X1_new, return_cov=TRUE)
+gpKerGP1$fit("Gaussian", "constant", estimate_nugget=FALSE, trace=TRUE, multistart=5)
+gpKerGP1_pred <- gpKerGP1$predict(X_new=X1_new, return_cov=TRUE, include_nugget=TRUE)
 gpKerGP1$plot_pred_1d(X1_new, pred_list=gpKerGP1_pred, Y_new=Y1_new_noiseless)
 
 ```
