Adding script to test different emulators for quadratic functions.

--- a/math/latex_macros_general.tex
+++ b/math/latex_macros_general.tex
@@ -46,4 +46,5 @@
 \newcommand{\Prob}{\mathbb{P}}
 \newcommand{\Gaussian}{\mathcal{N}}
 \newcommand{\LN}{\text{LN}} % Log-normal distribution 
+\newcommand{\given}{\mid} 
 
